--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,6 +13,9 @@
 
     <extensions defaultExtensionNs="com.intellij">
         <annotator language="SARL" implementationClass="io.sarl.idea.language.SarlAnnotator" />
+        <codeInsight.lineMarkerProvider
+                language="SARL"
+                implementationClass="io.sarl.idea.language.SarlLineMarkerProvider" />
         <fileType name="SARL File" implementationClass="io.sarl.idea.SarlFileType"
                   fieldName="INSTANCE" language="SARL" extensions="sarl" />
         <lang.parserDefinition
