--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,6 +31,7 @@
                 language="SARL"
                 implementationClass="io.sarl.idea.language.SarlFormattingModelBuilder" />
         <lang.commenter language="SARL" implementationClass="io.sarl.idea.language.SarlCommenter" />
+        <lang.foldingBuilder language="SARL" implementationClass="io.sarl.idea.language.SarlFoldingBuilder" />
     </extensions>
 
     <actions>
