--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -34,7 +34,7 @@
 <!--                language="SARL"-->
 <!--                implementationClass="io.sarl.idea.language.formatting.SarlFormattingModelBuilder"/>-->
         <lang.commenter language="SARL" implementationClass="io.sarl.idea.language.SarlCommenter"/>
-<!--        <lang.foldingBuilder language="SARL" implementationClass="io.sarl.idea.language.SarlFoldingBuilder"/>-->
+        <lang.foldingBuilder language="SARL" implementationClass="io.sarl.idea.language.SarlFoldingBuilder"/>
 <!--        <completion.contributor language="SARL" implementationClass="io.sarl.idea.language.SarlCompletionContributor"/>-->
 <!--        <psi.referenceContributor implementation="io.sarl.idea.language.reference.SarlReferenceContributor"/>-->
     </extensions>
